--- a/Kmtfile.example.yml
+++ b/Kmtfile.example.yml
@@ -1,5 +1,3 @@
-version: 1.0
-
 migration:
   pg_dump: /usr/bin/pg_dump
   folder: migrations
@@ -13,6 +11,8 @@ migration:
       name: asgard
       user: user
       password: s3cret
+      options:
+        sslmode: disable
       schemas:
         activity:
           excludes:
